[gd_scene load_steps=6 format=3 uid="uid://rhego77m5h0h"]

[ext_resource type="Texture2D" uid="uid://hqiwh1f36r3q" path="res://Assets/ball.png" id="1_jcwvw"]
[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_rqjqq"]
[ext_resource type="AudioStream" uid="uid://b7bsdtawm6duh" path="res://Assets/paddle_hit.ogg" id="3_i7au3"]
[ext_resource type="AudioStream" uid="uid://defv7xkiq57ye" path="res://Assets/score.ogg" id="4_514nq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mw5he"]
radius = 6.0

[node name="Ball" type="Area2D"]
script = ExtResource("1_rqjqq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_jcwvw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mw5he")

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PaddleHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i7au3")

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_514nq")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
